Adds run target type of ssh and the ability to set remote models
